<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_PortAddr" Id="{27ded09f-7790-44b2-ba43-9b7b29bf5b33}">
    <Declaration><![CDATA[TYPE ST_PortAddr :
STRUCT
    portA : UINT;
    portB : UINT;
    portC : UINT;
    portD : UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>