<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_TopologyData" Id="{5d08a84e-1f56-46ac-aaa4-2ed7c29c3705}">
    <Declaration><![CDATA[TYPE ST_TopologyData :
STRUCT
    nOwnPhysicalAddr 	: UINT;
    nOwnAutoIncAddr		: UINT;
    stPhysicalAddr		: ST_PortAddr;
    stAutoIncAddr		: ST_PortAddr;
    anPortDelay			: ARRAY [0..2] OF UDINT; (* EC_AD, EC_DB, EC_BC *)
    anReserved			: ARRAY [0..7] OF UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>